@@ -30,7 +30,6 @@
     <checkstyle.skip>false</checkstyle.skip>
     <ipv6.server.jvm.args>-Djboss.bind.address=[::1] -Djboss.bind.address.management=[::1]
       -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</ipv6.server.jvm.args>
-    <jvm.args.modular>--add-modules=java.se</jvm.args.modular>
     <server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug} ${jvm.args.modular}</server.jvm.args>
     <sortpom.skip>false</sortpom.skip>
   </properties>
